@@ -1,0 +1,5 @@
+Processing test_zope_interface...
+
+Warnings...
+
+None
