@@ -1,3 +1,14 @@
+2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test/common.py:
+	* test/expected/test_zope_interface:
+	* test/input/test_zope_interface.py:
+	* test/main.py:
+	* test/test_stdlib.py:
+	  Add a first stab at a unittest-based testsuite.
+	  Add a test for bug #382217 that I wanted to fix that can't
+	  be tested in the current test suite.
+
 2008-07-04  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* test_input/test86.py:
